# api-definition/src/main/resources/static/V1/openapi.yaml
@@ -35,6 +35,7 @@ paths:
           required: false
           schema:
             type: string
+            format: string
         - in: query
           name: name
           required: false
@@ -105,7 +106,7 @@ paths:
           required: true
           schema:
             type: string
-            format: uuid
+            format: string
       responses:
         "200":
           description: A Project
@@ -229,7 +230,6 @@ paths:
           required: true
           schema:
             type: string
-            format: uuid
       responses:
         "200":
           description: A Task
@@ -257,7 +257,6 @@ paths:
           required: true
           schema:
             type: string
-            format: uuid
         - in: query
           name: pageable
           required: false
@@ -292,7 +291,6 @@ paths:
           required: true
           schema:
             type: string
-            format: uuid
       requestBody:
         required: true
         content:
@@ -326,7 +324,6 @@ paths:
           required: true
           schema:
             type: string
-            format: uuid
         - in: query
           name: pageable
           required: false
@@ -358,7 +355,6 @@ paths:
           required: true
           schema:
             type: string
-            format: uuid
       requestBody:
         required: true
         content:
@@ -683,7 +679,7 @@ components:
      properties:
        identifier:
          type: string
-         format: uuid
+         format: string
          description: Returned by GET, not used in POST/PUT/PATCH
          readOnly: true
        name:
@@ -691,6 +687,9 @@ components:
          type: string
        description:
          description: This is the description of the project
+         type: string
+       prefixIdentifier:
+         description: The prefix part that every identifier haves. For example, if the prefix is <my-project> then the identifier will be <my-project-number>
          type: string
        creationDate:
          type: string
@@ -715,7 +714,7 @@ components:
       properties:
         identifier:
           type: string
-          format: uuid
+          format: string
           description: Returned by GET, not used in POST/PUT/PATCH
           readOnly: true
         name:
@@ -737,7 +736,7 @@ components:
           $ref: '#/components/schemas/User'
         projectIdentifier:
           type: string
-          format: uuid
+          format: string
         realm:
           type: string
           description: This field is the realm from the IDP
