# api-implementation/src/main/java/gr/rk/tasks/entity/Project.java
@@ -8,23 +8,22 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.UUID;
 
 @Entity
 @Table(name = "projects")
-public class Project implements AutomaticValuesGeneration {
+public class Project {
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
-    @Column(unique = true)
-    private String identifier;
-
     @Column(nullable = false)
     private String name;
 
     private String description;
+
+    @Column(unique = true)
+    private String prefixIdentifier;
 
     @Generated(GenerationTime.INSERT)
     @Column(insertable = false, updatable = false)
@@ -48,24 +47,12 @@ public class Project implements AutomaticValuesGeneration {
         tasks = new ArrayList<>();
     }
 
-    @PrePersist
-    @Override
-    public void generateAutomatedValues() {
-        if (Objects.isNull(this.identifier)) {
-            this.identifier = UUID.randomUUID().toString();
-        }
-    }
-
     public Long getId() {
         return id;
     }
 
-    public String getIdentifier() {
-        return identifier;
-    }
-
-    public void setIdentifier(String identifier) {
-        this.identifier = identifier;
+    public void setId(Long id) {
+        this.id = id;
     }
 
     public String getName() {
@@ -83,6 +70,10 @@ public class Project implements AutomaticValuesGeneration {
     public void setDescription(String description) {
         this.description = description;
     }
+
+    public String getPrefixIdentifier() { return prefixIdentifier; }
+
+    public void setPrefixIdentifier(String prefixIdentifier) { this.prefixIdentifier = prefixIdentifier; }
 
     public LocalDateTime getCreatedAt() {
         return createdAt;
